--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <nav id="nav-bar">
+    <nav id="navbar">
       <header>jQuery</header>
       <ul>
         <li><a class="nav-link" href="#jQuery_Intro">jQuery Intro</a></li>
         <li>
-          <a class="nav-link" href="#jQuery-Brief-Look">jQuery Brief Look</a>
+          <a class="nav-link" href="#jQuery-Brief-Look">jQuery Brief-Look</a>
         </li>
         <li><a class="nav-link" href="#jQuery_History">jQuery History</a></li>
         <li>
@@ -180,21 +180,20 @@
             Example of linking a copy of the library locally (from the same
             server that hosts the Web page):
           </p>
-          <pre class="code"><span></span><span
-               class="p">&lt;</span
-                ><span
-                class="nt">script</span
-                > <span class="na">src</span
-                ><span class="o">=</span
-                ><span class="s">"jquery.js"</span
-                ><span class="p">&gt;&lt;/</span
-                ><span class="nt">script</span
-                ><span class="p">&gt;</span>
+          <pre class="code"><span></span><span class="p"
+              >&lt;</span><span class="nt"
+              >script</span
+              > <span class="na">src</span
+              ><span class="o">=</span
+              ><span class="s">"jquery.js"</span
+              ><span class="p">&gt;&lt;/</span
+              ><span class="nt">script</span
+              ><span class="p">&gt;</span>
           </pre>
           <p>
             Example of linking a copy of the library from jQuery's public CDN:
           </p>
-          <pre><span></span><span class="p">&lt;</span><span class="nt">script</span
+          <pre class="code"><span></span><span class="p">&lt;</span><span class="nt">script</span
             > <span class="na">src</span><span class="o">=</span><span class="s">"https://code.jquery.com/jquery-3.4.1.min.js"</span><span class="na">
             integrity</span><span class="o">=</span><span class="s">"sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="</span>
             <span class="na">crossorigin</span><span class="o">=</span><span class="s">"anonymous"</span><span class="p">&gt;&lt;/</span><span class="nt">script</span><span class="p">&gt;</span>
